; ModuleID = '/home/carl/AnghaBench/linux/net/tipc/extr_bcast.c_tipc_nlist_init.c'
source_filename = "/home/carl/AnghaBench/linux/net/tipc/extr_bcast.c_tipc_nlist_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tipc_nlist = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tipc_nlist_init(%struct.tipc_nlist* %0, i32 %1) #0 {
  %3 = alloca %struct.tipc_nlist*, align 8
  %4 = alloca i32, align 4
  store %struct.tipc_nlist* %0, %struct.tipc_nlist** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.tipc_nlist*, %struct.tipc_nlist** %3, align 8
  %6 = call i32 @memset(%struct.tipc_nlist* %5, i32 0, i32 8)
  %7 = load %struct.tipc_nlist*, %struct.tipc_nlist** %3, align 8
  %8 = getelementptr inbounds %struct.tipc_nlist, %struct.tipc_nlist* %7, i32 0, i32 1
  %9 = call i32 @INIT_LIST_HEAD(i32* %8)
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.tipc_nlist*, %struct.tipc_nlist** %3, align 8
  %12 = getelementptr inbounds %struct.tipc_nlist, %struct.tipc_nlist* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  ret void
}

declare dso_local i32 @memset(%struct.tipc_nlist*, i32, i32) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
